new folders for nav-bar and inclusing a banner-style

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header class="header">
         <a href="index.html"><div class="logo-middleEarth">Middle Earth</div></a>
         <img src="./imgs/logo-lordOfRings.png" alt="logo-LordOfRings" class="logo-lordOfRings">
+        <!-- nav tab buttons -->
         <nav id="menu-header">
             <ul>
                 <li><a href="#">About Us</a></li>
@@ -19,5 +20,20 @@
             </ul> 
         </nav>
     </header>
+    <main> 
+        <!-- this ID function return to the top of the page -->
+        <section id="top">
+            <div class="banner">
+                <!-- flower vase -->
+                <img src="./imgs/HangingPlants.png" alt="HangingPlants" class="banner-image">
+                <div class="banner-title">
+                    <h1>All About Tolkien's World</h1>
+                    <h2>you will find here!</h2>
+                </div>
+                <!-- hobbits image -->
+                <img src="./imgs/hobbits.png" alt="hobbits" class="banner-image1">
+            </div>
+        </section>  
+    </main>
 </body>
 </html>
