updated index.html nav-tap to nav-bar

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header">
         <a href="index.html"><div class="logo-middleEarth">Middle Earth</div></a>
         <img src="./imgs/logo-lordOfRings.png" alt="logo-LordOfRings" class="logo-lordOfRings">
-        <!-- nav tab buttons -->
+        <!-- nav-bar buttons -->
         <nav id="menu-header">
             <ul>
                 <li><a href="#">About Us</a></li>
