updating bannerCSS and banner-title

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <!-- flower vase -->
                 <img src="./imgs/HangingPlants.png" alt="HangingPlants" class="banner-image">
                 <div class="banner-title">
-                    <h1>All About Tolkien's World</h1>
+                    <h1>All About Tolkien's World,</h1>
                     <h2>you will find here!</h2>
                 </div>
                 <!-- hobbits image -->
