--- a/index.html
+++ b/index.html
@@ -20,20 +20,96 @@
             </ul> 
         </nav>
     </header>
-    <main> 
-        <!-- this ID function return to the top of the page -->
-        <section id="top">
-            <div class="banner">
-                <!-- flower vase -->
-                <img src="./imgs/HangingPlants.png" alt="HangingPlants" class="banner-image">
-                <div class="banner-title">
-                    <h1>All About Tolkien's World,</h1>
-                    <h2>you will find here!</h2>
-                </div>
-                <!-- hobbits image -->
-                <img src="./imgs/hobbits.png" alt="hobbits" class="banner-image1">
+    <!-- this ID function return to the top of the page -->
+    <section id="top">
+        <div class="banner">
+            <!-- flower vase -->
+            <img src="./imgs/HangingPlants.png" alt="HangingPlants" class="banner-image">
+            <div class="banner-title">
+                <h1>All About Tolkien's World,</h1>
+                <h2>you will find here!</h2>
             </div>
-        </section>  
+            <!-- hobbits image -->
+            <img src="./imgs/hobbits.png" alt="hobbits" class="banner-image1">
+        </div>
+    </section>  
+    <main class="backgroundMain"> 
+        <div class="title-main">
+            <h1>The Kingdoms</h1>
+            <hr>
+        </div>
+        <section class="cardSection">
+            <div class="mainContent">
+                <div class="categoryCard">
+                    <h3 class="mainCategoryCardTitle">Bree village</h3>
+                    <img src="./imgs/Bree.jpg" alt="Bree-Kingdom" class="mainCardImg">
+                    <p class="mainCategoryCardDescription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, tenetur!</p>
+                </div>
+                <div class="categoryCard">
+                    <h3 class="mainCategoryCardTitle">Caradhras</h3>
+                    <img src="./imgs/Caradhras.jpg" alt="Caradhras-Kingdom" class="mainCardImg">
+                    <p class="mainCategoryCardDescription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, tenetur!</p>
+                </div>
+                <div class="categoryCard">
+                    <h3 class="mainCategoryCardTitle">Gondor</h3>
+                    <img src="./imgs/Gondor.png" alt="Gondor-Kingdom" class="mainCardImg">
+                    <p class="mainCategoryCardDescription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, tenetur!</p>
+                </div>
+                <div class="categoryCard">
+                    <h3 class="mainCategoryCardTitle">Khazad-dûm</h3>
+                    <img src="./imgs/Moria.png" alt="KhazadDûm-Kingdom" class="mainCardImg">
+                    <p class="mainCategoryCardDescription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, tenetur!</p>
+                </div>
+                <div class="categoryCard">
+                    <h3 class="mainCategoryCardTitle">Lóthlorien</h3>
+                    <img src="./imgs/Lóthlorien.png" alt="Lóthlorien-Kingdom" class="mainCardImg">
+                    <p class="mainCategoryCardDescription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, tenetur!</p>
+                </div>
+                <div class="categoryCard">
+                    <h3 class="mainCategoryCardTitle">Lindon</h3>
+                    <img src="./imgs/Bree.jpg" alt="Lindon-Kingdom" class="mainCardImg">
+                    <p class="mainCategoryCardDescription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, tenetur!</p>
+                </div>
+                <div class="categoryCard">
+                    <h3 class="mainCategoryCardTitle">Bree village</h3>
+                    <img src="./imgs/Bree.jpg" alt="Bree-Kingdom" class="mainCardImg">
+                    <p class="mainCategoryCardDescription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, tenetur!</p>
+                </div>
+                <div class="categoryCard">
+                    <h3 class="mainCategoryCardTitle">Bree village</h3>
+                    <img src="./imgs/Bree.jpg" alt="Bree-Kingdom" class="mainCardImg">
+                    <p class="mainCategoryCardDescription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, tenetur!</p>
+                </div>
+                <div class="categoryCard">
+                    <h3 class="mainCategoryCardTitle">Bree village</h3>
+                                        <img src="./imgs/Bree.jpg" alt="Bree-Kingdom" class="mainCardImg">
+                    <p class="mainCategoryCardDescription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, tenetur!</p>
+                </div>
+            </div>
+            <div class="sidebarContent">
+                <h2>EXTRAS</h2>
+                <div class="sidebarCard">
+                    <img src="./imgs/hobbits.png" alt="" class="sidebarCardImg">
+                    <h3 class="sidebardCardTitle">TOLKIEN</h3>
+                </div>
+                <div class="sidebarCard">
+                    <img src="./imgs/hobbits.png" alt="" class="sidebarCardImg">
+                    <h3 class="sidebardCardTitle">TOLKIEN</h3>
+                </div>
+                <div class="sidebarCard">
+                    <img src="./imgs/hobbits.png" alt="" class="sidebarCardImg">
+                    <h3 class="sidebardCardTitle">TOLKIEN</h3>
+                </div>
+                <div class="sidebarCard">
+                    <img src="./imgs/hobbits.png" alt="" class="sidebarCardImg">
+                    <h3 class="sidebardCardTitle">TOLKIEN</h3>
+                </div>
+                <div class="sidebarCard">
+                    <img src="./imgs/hobbits.png" alt="" class="sidebarCardImg">
+                    <h3 class="sidebarCardTitle">TOLKIEN</h3>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
