adding a titles and descriptions for cards

--- a/index.html
+++ b/index.html
@@ -38,52 +38,80 @@
             <h1>The Kingdoms</h1>
             <hr>
         </div>
-        <section class="cardSection">
+        <section class="cardSection"> 
             <div class="mainContent">
                 <div class="categoryCard">
                     <h3 class="mainCategoryCardTitle">Bree village</h3>
                     <img src="./imgs/Bree.jpg" alt="Bree-Kingdom" class="mainCardImg">
-                    <p class="mainCategoryCardDescription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, tenetur!</p>
+                    <p class="mainCategoryCardDescription"> 
+                        Bree was a village of <strong>Men</strong> and <strong>hobbits</strong>, located east of the Shire 
+                        and south of Fornost in Eriador.<br>The <strong>Prancing Pony</strong>  was an inn located in the village.
+                    </p>
                 </div>
                 <div class="categoryCard">
                     <h3 class="mainCategoryCardTitle">Caradhras</h3>
                     <img src="./imgs/Caradhras.jpg" alt="Caradhras-Kingdom" class="mainCardImg">
-                    <p class="mainCategoryCardDescription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, tenetur!</p>
+                    <p class="mainCategoryCardDescription">
+                        <strong>Caradhras</strong>, also called the <strong>Redhorn</strong> and <strong>Barazinbar</strong>, 
+                        was one of the mightiest peaks in the Misty Mountains. 
+                    </p>
                 </div>
                 <div class="categoryCard">
                     <h3 class="mainCategoryCardTitle">Gondor</h3>
                     <img src="./imgs/Gondor.png" alt="Gondor-Kingdom" class="mainCardImg">
-                    <p class="mainCategoryCardDescription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, tenetur!</p>
+                    <p class="mainCategoryCardDescription"><strong>Gondor</strong> 
+                        was the most prominent kingdom of Men in <strong>Middle-earth</strong>. Gondor was founded by the brothers 
+                        <strong>Isildur</strong> and <strong>Anárion</strong>, exiles from Númenor.
+                    </p>
                 </div>
                 <div class="categoryCard">
                     <h3 class="mainCategoryCardTitle">Khazad-dûm</h3>
                     <img src="./imgs/Moria.png" alt="KhazadDûm-Kingdom" class="mainCardImg">
-                    <p class="mainCategoryCardDescription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, tenetur!</p>
+                    <p class="mainCategoryCardDescription">
+                        <strong>Khazad-dûm</strong>, commonly known as <strong>Moria</strong> or <strong>The Dwarrowdelf</strong>, was an underground kingdom beneath the 
+                        Misty Mountains (Caradhras). 
+                    </p>
+                </div>
+                <div class="categoryCard">
+                    <h3 class="mainCategoryCardTitle">Lindon</h3>
+                    <img src="./imgs/Lindon.png" alt="Lindon-Kingdom" class="mainCardImg">
+                    <p class="mainCategoryCardDescription">
+                        <strong>Lindon</strong> was a region of western Middle-earth. An important Elvish realm, 
+                        known for its <strong>harbors</strong> and <strong>Elven ships</strong> that would embark 
+                        unto the Uttermost West.
+                    </p>
                 </div>
                 <div class="categoryCard">
                     <h3 class="mainCategoryCardTitle">Lóthlorien</h3>
                     <img src="./imgs/Lóthlorien.png" alt="Lóthlorien-Kingdom" class="mainCardImg">
-                    <p class="mainCategoryCardDescription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, tenetur!</p>
+                    <p class="mainCategoryCardDescription">
+                        <strong>Lothlórien</strong>, also known as <strong>Lórien</strong>, was the vast woodland realm of the 
+                        Galadhrim elves located near the lower Misty Mountains in northern Middle-earth.
+                    </p>
                 </div>
                 <div class="categoryCard">
-                    <h3 class="mainCategoryCardTitle">Lindon</h3>
-                    <img src="./imgs/Bree.jpg" alt="Lindon-Kingdom" class="mainCardImg">
-                    <p class="mainCategoryCardDescription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, tenetur!</p>
+                    <h3 class="mainCategoryCardTitle">Mordor</h3>
+                    <img src="./imgs/Mordor.png" alt="Mordor-Kingdom" class="mainCardImg">
+                    <p class="mainCategoryCardDescription">
+                        <Strong>Mordor</Strong> was a black, volcanic plain in the southeast of Middle-earth to the east of 
+                        <strong>Gondor</strong>.
+                    </p>
                 </div>
                 <div class="categoryCard">
-                    <h3 class="mainCategoryCardTitle">Bree village</h3>
-                    <img src="./imgs/Bree.jpg" alt="Bree-Kingdom" class="mainCardImg">
-                    <p class="mainCategoryCardDescription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, tenetur!</p>
+                    <h3 class="mainCategoryCardTitle">Númenor</h3>
+                    <img src="./imgs/Numenor.png" alt="Numenor-Kingdom" class="mainCardImg">
+                    <p class="mainCategoryCardDescription">
+                        <strong>Númenor</strong> was a kingdom of Men, established on an island brought up out of the sea by the 
+                        <strong>Valar</strong> in the early <strong>Second Age</strong>.
+                    </p>
                 </div>
                 <div class="categoryCard">
-                    <h3 class="mainCategoryCardTitle">Bree village</h3>
-                    <img src="./imgs/Bree.jpg" alt="Bree-Kingdom" class="mainCardImg">
-                    <p class="mainCategoryCardDescription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, tenetur!</p>
-                </div>
-                <div class="categoryCard">
-                    <h3 class="mainCategoryCardTitle">Bree village</h3>
-                                        <img src="./imgs/Bree.jpg" alt="Bree-Kingdom" class="mainCardImg">
-                    <p class="mainCategoryCardDescription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, tenetur!</p>
+                    <h3 class="mainCategoryCardTitle">Rivendell</h3>
+                    <img src="./imgs/Rivendell.png" alt="Rivendell-Kingdom" class="mainCardImg">
+                    <p class="mainCategoryCardDescription">
+                        <strong>Rivendell</strong>, also known as <strong>Imladris</strong> in Sindarin, was an Elven town and the 
+                        house of <strong>Elrond</strong> located in Middle-earth.
+                    </p>
                 </div>
             </div>
             <div class="sidebarContent">
