animation on categoryCard zoom

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <img src="./imgs/Bree.jpg" alt="Bree-Kingdom" class="mainCardImg">
                     <p class="mainCategoryCardDescription"> 
                         Bree was a village of <strong>Men</strong> and <strong>hobbits</strong>, located east of the Shire 
-                        and south of Fornost in Eriador.<br>The <strong>Prancing Pony</strong>  was an inn located in the village.
+                        and south of Fornost in Eriador. The <strong>Prancing Pony</strong>  was an inn located in the village.
                     </p>
                 </div>
                 <div class="categoryCard">
