Adding a new style (sidebar.css)

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 </div>
             </div>
             <div class="sidebarContent">
-                <h2>EXTRAS</h2>
+                <h2>Top searches</h2>
                 <div class="sidebarCard">
                     <img src="./imgs/hobbits.png" alt="" class="sidebarCardImg">
                     <h3 class="sidebardCardTitle">TOLKIEN</h3>
