sidebar contents, images, description and animations

--- a/index.html
+++ b/index.html
@@ -117,24 +117,24 @@
             <div class="sidebarContent">
                 <h2>Top searches</h2>
                 <div class="sidebarCard">
-                    <img src="./imgs/hobbits.png" alt="" class="sidebarCardImg">
-                    <h3 class="sidebardCardTitle">TOLKIEN</h3>
+                    <img src="./imgs/Sauron.png" alt="Sauron" class="sidebarCardImg">
+                    <h3 class="sidebarCardTitle">Sauron</h3>
                 </div>
                 <div class="sidebarCard">
-                    <img src="./imgs/hobbits.png" alt="" class="sidebarCardImg">
-                    <h3 class="sidebardCardTitle">TOLKIEN</h3>
+                    <img src="./imgs/Galadriel.png" alt="Galadriel" class="sidebarCardImg">
+                    <h3 class="sidebarCardTitle">Galadriel</h3>
                 </div>
                 <div class="sidebarCard">
-                    <img src="./imgs/hobbits.png" alt="" class="sidebarCardImg">
-                    <h3 class="sidebardCardTitle">TOLKIEN</h3>
+                    <img src="./imgs/Elrond.png" alt="Elrond" class="sidebarCardImg">
+                    <h3 class="sidebarCardTitle">Elrond</h3>
                 </div>
                 <div class="sidebarCard">
-                    <img src="./imgs/hobbits.png" alt="" class="sidebarCardImg">
-                    <h3 class="sidebardCardTitle">TOLKIEN</h3>
+                    <img src="./imgs/Gandalf.png" alt="Gandalf" class="sidebarCardImg">
+                    <h3 class="sidebarCardTitle">Gandalf</h3>
                 </div>
                 <div class="sidebarCard">
-                    <img src="./imgs/hobbits.png" alt="" class="sidebarCardImg">
-                    <h3 class="sidebarCardTitle">TOLKIEN</h3>
+                    <img src="./imgs/Bilbo.png" alt="Bilbo" class="sidebarCardImg">
+                    <h3 class="sidebarCardTitle">Bilbo Baggins</h3>
                 </div>
             </div>
         </section>
