Finalizing main-content, including footer.css and index, and a few more things

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="index.html"><div class="logo-middleEarth">Middle Earth</div></a>
+        <a href="index.html"><p class="logo-middleEarth">Middle Earth</p></a>
         <img src="./imgs/logo-lordOfRings.png" alt="logo-LordOfRings" class="logo-lordOfRings">
         <!-- nav-bar buttons -->
         <nav id="menu-header">
@@ -33,7 +33,7 @@
             <img src="./imgs/hobbits.png" alt="hobbits" class="banner-image1">
         </div>
     </section>  
-    <main class="backgroundMain"> 
+    <main> 
         <div class="title-main">
             <h1>The Kingdoms</h1>
             <hr>
@@ -139,5 +139,14 @@
             </div>
         </section>
     </main>
+    <footer>
+        <div class="footer">
+            <p class="footerTitle">Middle Earth</p>
+            <a href="#top" class="descriptionFooter">
+                <p>Back to top</p>
+            </a>
+            <p class="creditFooter">Developed by Adrian L. Silva</p>
+        </div>
+    </footer>
 </body>
 </html>
